--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-icon": "^1.0.0",
     "react-icons": "^5.3.0",
+    "react-spinners": "^0.14.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
