--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@prisma/client": "^5.19.0",
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.45.1",
+    "@tanstack/react-query": "^5.55.4",
+    "@tanstack/react-query-devtools": "^5.55.4",
+    "@tanstack/react-query-next-experimental": "^5.55.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icon": "^1.0.0",
     "react-icons": "^5.3.0",
     "react-spinners": "^0.14.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.53.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
